--- a/index.html
+++ b/index.html
@@ -1,17 +1,158 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
-</head>
-<style>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <style>
+      .bold {
+        font-weight: bold;
+      }
 
-</style>
-<body>
+      h2 {
+        text-align: center;
+        text-decoration: underline overline solid black;
+      }
 
+      p {
+        text-align: justify;
+        width: 50vw;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 1.2em; /* Adjust font size for better readability */
+        line-height: 1.6; /* Improve line spacing */
+      }
 
+      section {
+        border-bottom: 5px solid black;
+      }
 
-	
-</body>
+      #section1 {
+        height: 80vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center; /* Center content vertically */
+        align-items: center; /* Center content horizontally */
+        position: relative; /* For positioning the "Sample Poem" text */
+      }
+
+      #section1::before {
+        background-image: url("https://images.unsplash.com/reserve/LJIZlzHgQ7WPSh5KVTCB_Typewriter.jpg?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=80");
+        background-size: cover;
+        background-position: center;
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        z-index: -2;
+        opacity: 0.3;
+      }
+
+      #section2 {
+        padding: 2em;
+        color: white;
+        height: 60vh;
+        background: rgb(131, 58, 180);
+        background: linear-gradient(90deg, rgba(131, 58, 180, 1) 0%, rgba(29, 211, 253, 1) 50%, rgba(252, 176, 69, 1) 100%);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      /* Add red double outline on paragraph hover */
+      p:hover {
+        outline: 2px double red;
+      }
+
+      /* Styles for the centered div */
+      .centered-div {
+        width: 400px;
+        height: 300px;
+        background-color: white;
+        border-radius: 4px;
+        padding: 5px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Box shadow */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .centered-div h2 {
+        color: black;
+        text-decoration: none;
+      }
+
+      /* Poem-specific styles */
+      .poem {
+        text-align: center;
+        font-size: 1.2em;
+        line-height: 1.6;
+        margin: 0 auto;
+        max-width: 600px;
+      }
+
+      .poem p {
+        margin: 0.5em 0; /* Add spacing between stanzas */
+      }
+
+      /* Styles for "Sample Poem" text */
+      .sample-poem {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+        font-weight: bold;
+        font-size: 1.5em;
+      }
+
+      /* Styles for "Come to Labs" text and bars */
+      .come-to-labs {
+        text-align: center;
+        font-weight: bold;
+        font-size: 1.5em;
+        margin: 20px 0;
+        position: relative;
+      }
+
+      .come-to-labs::before,
+      .come-to-labs::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 3px;
+        background: black;
+        margin: 10px 0;
+      }
+    </style>
+  </head>
+  <body>
+    <section id="section1">
+      <!-- "Sample Poem" text -->
+      <div class="sample-poem">Sample Poem</div>
+
+      <!-- "Come to Labs" text with bars -->
+      <div class="come-to-labs">Come to Labs</div>
+
+      <!-- Poem content -->
+      <div class="poem">
+        <p>Why won't students come to labs? This is something I always ponder.</p>
+        <p>After unprepared students write exams, They watch their marks in wonder.</p>
+        <p>Why won't students come to labs? What is more important than class?</p>
+        <p>How can you be a student if you don't even try to pass?</p>
+        <p>Why won't students come to labs? It happens all the time.</p>
+        <p>If you came to labs, you'd know what to do. But you would rather duck and go lime.</p>
+        <p>Why won't students come to labs? I see them all now stressing.</p>
+        <p>If you only learned this basic programming, You would surely now be zessing.</p>
+      </div>
+    </section>
+    <section id="section2">
+      <h1>Section 2</h1>
+      <!-- Centered div -->
+      <div class="centered-div">
+        <h2>My Div</h2>
+      </div>
+    </section>
+    <script src="script.js"></script>
+  </body>
 </html>
